Week 1 Task Completed

--- a/angular_week1/asif/single-page-app/employeesSalaries.html
+++ b/angular_week1/asif/single-page-app/employeesSalaries.html
@@ -1,68 +1,81 @@
+
 <div class="table-responsive-xl" id="employees-salaries-container">
   <p class="h3 text-center">Employees Salaries Data</p>
+
+  <!-- filters -->
   <div class="row mb-3">
     <div class="col-12 col-xl-3 my-1">
-      <label for="salaryMonth" class="form-label m-0">Salary Month</label>
-      <select class="form-select form-select-sm" id="salaryMonth" onchange="getDateOfPayment();"></select>
+      <label for="salaryMonthFilter" class="form-label m-0">Salary Month</label>
+      <select class="form-select form-select-sm" id="salaryMonthFilter" ng-model="selectedSalaryMonth" ng-change="getDateOfPayment()">
+        <option value="">All</option>
+        <option ng-repeat="item in salaryMonthFilterArr" value="{{ item.for_month }}">{{ item.salary_month | capitalize }}</option>
+      </select>
     </div>
     <div class="col-12 col-xl-3 my-1">
-      <label for="paidOnFilter" class="form-label m-0">Date of Payment</label>
-      <select class="form-select form-select-sm" id="paidOnFilter"></select>
+      <label for="dateOfPaymentFilter" class="form-label m-0">Date of Payment</label>
+      <select class="form-select form-select-sm" id="dateOfPaymentFilter" ng-model="selectedDateOfPayment">
+        <option value="">All</option>
+        <option ng-repeat="item in dateOfPaymentFilterArr" value="{{ item.paid_on }}">{{ item.date_of_payment }}</option>
+      </select>
     </div>
     <div class="col-12 col-xl-3 my-1">
-      <label for="employeeName" class="form-label m-0">Employee Name</label>
-      <select class="form-select form-select-sm" id="employeeName"></select>
+      <label for="employeeNameFilter" class="form-label m-0">Employee Name</label>
+      <select class="form-select form-select-sm" id="employeeNameFilter" ng-model="selectedEmployeeName">
+        <option value="">All</option>
+        <option ng-repeat="item in employeesList" value="{{ item.id }}">{{ item.name }}</option>
+      </select>
     </div>
     <div class="col-12 col-xl-1 w-auto my-1 text-center">
-      <button class="btn btn-info btn-sm mt-4" onclick="searchSalaries();">Search</button>
+      <button class="btn btn-info btn-sm mt-4" ng-click="filterSalaries();">Search</button>
     </div>
     <div class="col-12 col-xl-1 w-auto my-1 text-center">
-      <button class="btn btn-secondary btn-sm mt-4" onclick="clearSalaryFilters()">Clear</button>
+      <button class="btn btn-secondary btn-sm mt-4" ng-click="clearFilters()">Clear</button>
     </div>
     <div class="col-12 col-xl-1 w-auto my-1 ms-auto text-center">
-      <button class="btn btn-primary btn-sm mt-4" data-bs-toggle="modal" data-bs-target="#addNewSalaryModal" onclick="getEmployeesList();">Add New
-        Salary</button>
+      <button class="btn btn-primary btn-sm mt-4" data-bs-toggle="modal" data-bs-target="#addNewSalaryModal">Add New Salary</button>
     </div>
     <!-- end of filters -->
   </div>
 
-
+  <!-- Employees Salaries Table  -->
   <div class="row">
-    <table class="table table-sm table-striped table-bordered" id="salariesTable">
-      <thead></thead>
-      <tbody></tbody>
+    <table class="table table-sm table-striped table-bordered" id="employeesSalariesTable">
+      <thead>
+        <tr>
+          <th scope="col">S.No</th>
+          <th scope="col">Employee Name</th>
+          <th scope="col">Salary Month</th>
+          <th scope="col">Salary Year</th>
+          <th scope="col">Date of Payment</th>
+          <th scope="col">Gross Salary</th>
+          <th scope="col">Deductions</th>
+          <th scope="col">Net Salary</th>
+          <th scope="col">Date Created</th>
+          <th scope="col">Salary Breakup</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="salaryVal in employeesSalariesData">
+          <td>{{ $index + 1 }}</td>
+          <td>{{ salaryVal.employee_name }}</td>
+          <td>{{ salaryVal.salary_month | capitalize }}</td>
+          <td>{{ salaryVal.salary_year }}</td>
+          <td>{{ salaryVal.paid_on }}</td>
+          <td>{{ salaryVal.gross_salary }}</td>
+          <td>{{ salaryVal.deductions }}</td>
+          <td>{{ salaryVal.net_salary }}</td>
+          <td>{{ salaryVal.created_at }}</td>
+          <td>
+            <a class="btn btn-primary btn-sm m-1" data-bs-toggle="modal" data-bs-target="#viewSalaryBreakupModal" ng-click="viewSalaryBreakup(salaryVal)">View</a>
+            <a class="btn btn-danger btn-sm m-1" ng-click="deleteSalary(salaryVal.id)">Delete Salary</a>
+          </td>
+        </tr>
+      </tbody>
     </table>
+  <!-- Employees Salaries Table -->
   </div>
-
-  <div class="row" id="getSalariesError">
-
-  </div>
-
+  <div class="row"><p class="text-center">{{ employeesSalariesError }}</p></div>
   <!-- end of table container -->
-</div>
-
-<!-- Modal for view salary breakup -->
-<div class="modal fade" id="viewSalaryBreakupModal" tabindex="-1" aria-labelledby="viewSalaryBreakupModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="viewSalaryBreakupModalLabel">Employee Salary Details</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body table-responsive-md">
-        <div id="employeeDetails"></div>
-        <table class="table table-sm table-striped table-bordered" id="viewSalaryBreakupModalTable">
-          <thead></thead>
-          <tbody></tbody>
-        </table>
-        <div id="viewSalaryError"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 
@@ -84,7 +97,10 @@
             <div class="col-12">
               <div class="form-outline">
                 <label class="form-label" for="employeeNameSelect">Employee</label>
-                <select class="form-select" id="employeeNameSelect" onchange="getEmployeeForNewSalary()"></select>
+                <select class="form-select" id="employeeNameSelect" ng-change="getEmployeeData(employee.id)">
+                  <option value="" hidden selected>Select</option>
+                  <option ng-repeat="employee in employeesList" value="{{ employee.id }}">{{ employee.name }}</option>
+                </select>
                 <p class="errorMsgs" id="employeeNameSelectError"></p>
               </div>
             </div>
@@ -92,7 +108,24 @@
         
 
           <!-- for employee Details -->
-          <div id="employeeDetailsForNewSalary" class="row mb-3"></div>
+          <div id="employeeDetailsForNewSalary" class="row mb-3">
+            <div class="row mb-1 mx-auto">
+              <p class="col-6"><strong>Date of Birth:</strong>{{ employeeData.date_of_birth }}</p>
+              <p class="col-6"><strong>Date of Joining:</strong>{{ employeeData.date_of_joining }}</p>
+            </div>
+            <div class="row mb-1 mx-auto">
+              <p class="col-6"><strong>Working Status:</strong>{{ employeeData.working_status }}</p>
+              <p class="col-6"><strong>Designation:</strong>{{ employeeData.designation }}</p>
+            </div>
+            <div class="row mb-1 mx-auto">
+              <p class="col-6"><strong>Gender:</strong>{{ employeeData.gender }}</p>
+              <p class="col-6"><strong>Location:</strong>{{ employeeData.location }}</p>
+            </div>
+            <div class="row mb-1 mx-auto">
+              <p class="col-6"><strong>Phone:</strong>{{ employeeData.phone }}</p>
+              <p class="col-6"><strong>Gross Salary:</strong>{{ employeeData.gross_salary }}</p>
+            </div>
+          </div>
 
 
           <!-- for salary payment dates -->
@@ -240,13 +273,65 @@
   </div>
 </div>
 
+<!-- Modal for view salary breakup -->
+<div class="modal fade" id="viewSalaryBreakupModal" tabindex="-1" aria-labelledby="viewSalaryBreakupModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="viewSalaryBreakupModalLabel">Employee Salary Details</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body table-responsive-md">
+        <div id="employeeDetails">
+          <div class="row">
+            <p class="col-sm-6"><strong>Name:</strong>{{ employeeData.name }}</p>
+            <p class="col-sm-6"><strong>Date of Joining:</strong>{{ employeeData.date_of_joining }}</p>
+          </div>
+          <div class="row">
+            <p class="col-sm-6"><strong>Working Status:</strong>{{ employeeData.working_status }}</p>
+            <p class="col-sm-6"><strong>Designation:</strong>{{ employeeData.designation }}</p>
+          </div>
 
-
-<script type="text/javascript">
-  $('document').ready(function () {
-    getEmployeesSalaries();
-    getSalaryMonth();
-    getDateOfPayment();
-    getEmployeeForSalariesFilter();
-  });
-</script>
+          <!-- employee salary details -->
+          <div class="row">
+            <p class="col-sm-6"><strong>Salary Month:</strong>{{ employeeSalaryData.salary_month }}</p>
+            <p class="col-sm-6"><strong>Salary Year:</strong>{{ employeeSalaryData.salary_year }}</p>
+          </div>
+          <div class="row">
+            <p class="col-sm-6"><strong>Date of Payment:</strong>{{ employeeSalaryData.paid_on }}</p>
+          </div>
+        </div>
+        <table class="table table-sm table-striped table-bordered" id="viewSalaryBreakupModalTable">
+          <thead>
+            <tr>
+              <th scope="col">S.No</th>
+              <th scope="col">Description</th>
+              <th scope="col">Type</th>
+              <th scope="col">Amount</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="data in employeeSalaryBreakupData">
+              <td>{{ $index + 1 }}</td>
+              <td>{{ data.description }}</td>
+              <td>{{ data.type }}</td>
+              <td>{{ data.amount }}</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="row">
+          <p class="col-sm-4"><strong>Gross Salary:</strong> Rs. {{ employeeSalaryData.gross_salary }}</p>
+          <p class="col-sm-4"><strong>Deductions:</strong> Rs. {{ employeeSalaryData.deductions }}</p>
+          <p class="col-sm-4"><strong>Net Salary:</strong> Rs. {{ employeeSalaryData.net_salary }}</p></p>
+        </div>
+        <div id="viewSalaryBreakupError">
+          <p class="text-center">{{ viewSalaryBreakupError }}</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
