--- a/angular_laravel_task/sampath/client/dashboard.html
+++ b/angular_laravel_task/sampath/client/dashboard.html
@@ -38,7 +38,7 @@
         <script src="./assets/js/dashboard.js"></script>
         <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
-    <body>
+    <body ng-controller="DashboardController">
         <div ng-controller="NavbarController">
             <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
                 <a class="navbar-brand fw-bold" href="#">Keka.</a>
@@ -65,5 +65,9 @@
             </nav>
         </div>
         <ui-view></ui-view>
+        <!-- Loading -->
+        <div id="loading" class="d-none vh-100 vw-100 position-fixed start-0 top-0 bg-white d-flex align-items-center justify-content-center">
+            <img width="150px" src="https://raw.githubusercontent.com/Rogero0o/GifLoadingView/master/sample/src/main/res/drawable-hdpi/num79.gif" alt="">
+        </div>
     </body>
 </html>
