--- a/angular_laravel_task/sampath/client/dashboard.html
+++ b/angular_laravel_task/sampath/client/dashboard.html
@@ -32,42 +32,99 @@
             rel="stylesheet"
         />
         <!-- Toastify -->
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+        />
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/toastify-js"
+        ></script>
         <!-- Custom CSS and JS -->
         <script src="./assets/js/dashboard.js"></script>
         <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
     <body ng-controller="DashboardController">
-        <div ng-controller="NavbarController">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
-                <a class="navbar-brand fw-bold" href="#">Keka.</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item" ng-repeat="link in navbarLinks">
-                            <a class="nav-link fw-semibold" ui-sref-active="active" ui-sref="{{link.state}}"
-                                >{{link.name}}</a
-                            >
-                        </li>
-                    </ul>
+        <div class="main d-flex min-vh-100 position-relative">
+            <div
+                class="sidebar min-vh-100 position-fixed start-0 flex-column justify-content-between top-0 bg-dark text-white col-8 col-md-3 col-lg-2 d-none d-md-flex"
+                ng-controller="NavbarController"
+            >
+                <ul class="navbar-nav p-3">
+                    <li class="fw-bold text-white-50 fs-3">Keka</li>
+                    <hr />
+                    <li class="nav-item" ng-repeat="link in navbarLinks">
+                        <a
+                            class="nav-link text-white-50 fw-semibold"
+                            ui-sref-active="text-white-important"
+                            ui-sref="{{link.state}}"
+                            >{{link.name}}</a
+                        >
+                    </li>
+                </ul>
+                <div class="p-3">
+                    <p role="button" class="text-white m-0" ng-click="logout()">
+                        <i class="fas fa-sign-out"></i>
+                        Logout
+                    </p>
                 </div>
-            </nav>
+
+                <!-- Logout -->
+            </div>
+            <div class="body p-2 position-absolute end-0 p-md-5 col-12 col-md-9 col-lg-10">
+                <!-- Header -->
+                <nav
+                    class="navbar navbar-expand-lg bg-body-tertiary d-block d-md-none border-bottom mb-3"
+                    ng-controller="NavbarController"
+                >
+                    <div class="container-fluid">
+                        <a class="navbar-brand fw-bold" href="#">Keka</a>
+                        <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                        >
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div
+                            class="collapse navbar-collapse"
+                            id="navbarSupportedContent"
+                        >
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li
+                                    class="nav-item"
+                                    ng-repeat="link in navbarLinks"
+                                >
+                                    <a
+                                        class="nav-link"
+                                        ui-sref-active="active"
+                                        ui-sref="{{link.state}}"
+                                        >{{link.name}}</a
+                                    >
+                                </li>
+                            </ul>
+                            <button class="btn btn-danger" ng-click="logout()">
+                                <i class="fas fa-sign-out"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </div>
+                </nav>
+                <ui-view></ui-view>
+            </div>
         </div>
-        <ui-view></ui-view>
+
         <!-- Loading -->
-        <div id="loading" class="d-none vh-100 vw-100 position-fixed start-0 top-0 bg-white d-flex align-items-center justify-content-center">
-            <img width="150px" src="https://raw.githubusercontent.com/Rogero0o/GifLoadingView/master/sample/src/main/res/drawable-hdpi/num79.gif" alt="">
+        <div
+            id="loading"
+            class="d-none vh-100 vw-100 position-fixed start-0 top-0 bg-white d-flex align-items-center justify-content-center"
+        >
+            <!-- <img width="150px" src="https://raw.githubusercontent.com/Rogero0o/GifLoadingView/master/sample/src/main/res/drawable-hdpi/num79.gif" alt=""> -->
         </div>
     </body>
 </html>
