--- a/angular_laravel_task/sampath/client/dashboard.html
+++ b/angular_laravel_task/sampath/client/dashboard.html
@@ -43,6 +43,17 @@
         ></script>
         <!-- Custom CSS and JS -->
         <script src="./assets/js/dashboard.js"></script>
+        <script src="./assets/js/routes.js"></script>
+
+        <!-- Controllers -->
+        <script src="./assets/js/controllers/navbar.controller.js"></script>
+        <script src="./assets/js/controllers/employees.controller.js"></script>
+        <script src="./assets/js/controllers/tab.controller.js"></script>
+        <script src="./assets/js/controllers/addEmployee.controller.js"></script>
+        <script src="./assets/js/controllers/viewEmployee.controller.js"></script>
+        <script src="./assets/js/controllers/dashboard.controller.js"></script>
+
+
         <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
     <body ng-controller="DashboardController">
