Module Sidemenu and Employee Master

--- a/employee_earnings_deductions_task/client/index.html
+++ b/employee_earnings_deductions_task/client/index.html
@@ -54,14 +54,18 @@
     <!-- JS Files -->
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/routes.js"></script>
+    <script src="./assets/js/interceptors.js"></script>
 
     <!-- Directives -->
-    <script src="./assets/js/directives/header.js"></script>
+    <script src="./assets/js/directives/header.directive.js"></script>
 
     <!-- Services -->
-    <script src="./assets/js/services/userService.js"></script>
+    <script src="./assets/js/services/user.service.js"></script>
+    <script src="./assets/js/services/module.service.js"></script>
 
     <!-- Controllers -->
-    <script src="./assets/js/controllers/headerController.js"></script>
-    <script src="./assets/js/controllers/loginController.js"></script>
+    <script src="./assets/js/controllers/header.controller.js"></script>
+    <script src="./assets/js/controllers/login.controller.js"></script>
+    <script src="./assets/js/controllers/dashboard.controller.js"></script>
+    <script src="./assets/js/controllers/module.controller.js"></script>
 </html>
