Updated Database and employee list completed

--- a/employee_earnings_deductions_task/client/index.html
+++ b/employee_earnings_deductions_task/client/index.html
@@ -68,4 +68,5 @@
     <script src="./assets/js/controllers/login.controller.js"></script>
     <script src="./assets/js/controllers/dashboard.controller.js"></script>
     <script src="./assets/js/controllers/module.controller.js"></script>
+    <script src="./assets/js/controllers/employeeMaster.controller.js"></script>
 </html>
