--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -90,7 +90,7 @@
                     <a class="list-group-item">E-Bill Particulars</a>
                 </ul>
             </div>
-            <div class="content p-2 col-10 ps-3  overflow-auto" ui-view style="max-height: 100%;"></div>
+            <div class="content p-2 col-10 ps-3" ui-view style="max-height: 100%;"></div>
         </div>
     </div>
 </body>
