--- a/other_bills_task/client/addAgency.html
+++ b/other_bills_task/client/addAgency.html
@@ -1,20 +1,21 @@
-<div class="addAgencyForm bg-white p-2 rounded-2">
+<div class="addAgencyForm bg-white p-2 rounded-2 overflow-auto" ng-controller="AddAgencyController">
     <div class="heading bg-primary bg-opacity-25  m-1 p-2 rounded-1" style="color: rgba(5, 78, 195, 0.96);">
         <p class="m-0 p-0 fw-bold">ADD OTHER ESTABLISHMENT AGENCY</p>
     </div>
-    <div class="col-md-7 ms-3 mt-3 border p-2 rounded-2 fw-semibold" style="font-size: 15px;">
+    <div class="col-md-7 ms-3 mt-3 border p-2 bg-secondary bg-opacity-10 rounded-2 fw-semibold"
+        style="font-size: 15px;">
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                value="addSingleAgency">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="false"
+                ng-model="editable">
             <label class="form-check-label" for="inlineRadio1">Add Single Agency</label>
         </div>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                value="editAgencyDetails">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="true"
+                ng-model="editable">
             <label class="form-check-label" for="inlineRadio2">Edit Agency Details</label>
         </div>
     </div>
-    <!-- <div class="add">
+    <div class="add" ng-if="editable=='false'">
         <div class="bg-warning bg-opacity-10 ms-3 mt-3 p-2 rounded-2 fw-semibold"
             style="font-size: 15px;color: rgb(170, 72, 6);">
             <p class="p-0 m-0">You can see agency status report for the agencies you have added in Reports=>Agency
@@ -76,8 +77,8 @@
         <div class="submit d-flex justify-content-center mt-3">
             <a class="btn text-white" style="background-color: #1b354d;">ADD NEW AGENCY</a>
         </div>
-    </div> -->
-    <div class="editAgency col-md-7 m-4 border p-2 rounded-2">
+    </div>
+    <div class="editAgency col-md-7 m-4 border p-2 rounded-2" ng-if="editable=='true'">
         <div class="d-flex m-2 fw-bold pb-4" style="border-bottom:2px dashed lightgray  ;">
             <p class="m-0 p-0">Bank Ac No.:</p>
             <div class="col-4">
@@ -119,6 +120,11 @@
                 <input type="text" class="form-control border-0" name="agencyName" required>
                 <a class="btn text-white " style="background-color: #1b354d;">Search</a>
             </div>
+        </div>
+        <div class="d-flex m-2 p-2">
+            <p class="col-2 m-0 p-0 fw-bold"></p>
+            <a class="btn btn-success col-3 ms-5">UPDATE AGENCY
+            </a>
         </div>
     </div>
 </div>
