--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -76,6 +76,9 @@
     <script src="./assets/js/directives/header.directive.js"></script>
     <script src="./assets/js/directives/sidebar.directive.js"></script>
 
+    <!-- Services -->
+    <script src="./assets/js/services/addAgency.service.js"></script>
+
     <!-- Controllers -->
     <script src="./assets/js/controllers/dashboard.controller.js"></script>
     <script src="./assets/js/controllers/addAgency.controller.js"></script>
