Added Loading Screen

--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -40,6 +40,9 @@
                 </div>
             </div>
         </div>
+        <div id="loadingScreen" class="d-none loadingScreen position-fixed top-0 bg-white start-0 vh-100 vw-100 d-flex align-items-center justify-content-center bg-opacity-25">
+            <img src="./assets/images/loading.gif" style="width: 250px;" alt="">
+        </div>
     </body>
     <!-- Bootstrap -->
     <script
