--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="body d-flex">
-            <div class="sidebar col-2 align-items-center">
+            <div class="sidebar col-2 d-md-block d-none align-items-center">
                 <ul class="list-group rounded-0">
                     <a class="list-group-item rounded-0 d-flex gap-2 text-white" style="background-color: #1b354d;font-size: 15px;">
                         <i class="fas fa-house mt-1" style="font-size: 15px;font-weight: 10;"></i>
@@ -74,20 +74,20 @@
                     </a>
                     <a class="list-group-item">Add Agency In Bulk</a>
                     <a class="list-group-item" ui-sref="addAgency">Add New Agency</a>
-                    <a class="list-group-item">Bill Entry</a>
-                    <a class="list-group-item">View Bill</a>
-                    <a class="list-group-item">Covid Bills</a>
-                    <a class="list-group-item">Print Bill</a>
-                    <a class="list-group-item">Check Bill Status</a>
-                    <a class="list-group-item">Pay Slips</a>
-                    <a class="list-group-item">Reports</a>
-                    <a class="list-group-item">Check Bills</a>
-                    <a class="list-group-item">Check Form Type</a>
-                    <a class="list-group-item">Ekuber Returns</a>
-                    <a class="list-group-item">Check Employee Details</a>
-                    <a class="list-group-item">E-Flyleaf</a>
-                    <a class="list-group-item">DDO Reconciliation</a>
-                    <a class="list-group-item">E-Bill Particulars</a>
+                    <a class="list-group-item" ui-sref="billEntry">Bill Entry</a>
+                    <a class="list-group-item" href="">View Bill</a>
+                    <a class="list-group-item" href="">Covid Bills</a>
+                    <a class="list-group-item" href="">Print Bill</a>
+                    <a class="list-group-item" href="">Check Bill Status</a>
+                    <a class="list-group-item" href="">Pay Slips</a>
+                    <a class="list-group-item" href="">Reports</a>
+                    <a class="list-group-item" href="">Check Bills</a>
+                    <a class="list-group-item" href="">Check Form Type</a>
+                    <a class="list-group-item" href="">Ekuber Returns</a>
+                    <a class="list-group-item" href="">Check Employee Details</a>
+                    <a class="list-group-item" href="">E-Flyleaf</a>
+                    <a class="list-group-item" href="">DDO Reconciliation</a>
+                    <a class="list-group-item" href="">E-Bill Particulars</a>
                 </ul>
             </div>
             <div class="content p-2 col-10 ps-3" ui-view style="max-height: 100%;"></div>
