--- a/other_bills_task/client/addAgency.html
+++ b/other_bills_task/client/addAgency.html
@@ -1,4 +1,4 @@
-<div class="addAgencyForm bg-white p-2 rounded-2 overflow-auto" ng-controller="AddAgencyController">
+<div class="addAgencyForm bg-white p-2 rounded-2" ng-controller="AddAgencyController">
     <div class="heading bg-primary bg-opacity-25  m-1 p-2 rounded-1" style="color: rgba(5, 78, 195, 0.96);">
         <p class="m-0 p-0 fw-bold">ADD OTHER ESTABLISHMENT AGENCY</p>
     </div>
