--- a/other_bills_task/client/index.html
+++ b/other_bills_task/client/index.html
@@ -66,9 +66,9 @@
             </div>
         </div>
         <div class="body d-flex">
-            <div class="sidebar col-2 d-md-block d-none align-items-center">
-                <ul class="list-group rounded-0">
-                    <a class="list-group-item rounded-0 d-flex gap-2 text-white" style="background-color: #1b354d;font-size: 15px;">
+            <div class="sidebar col-2 d-md-block d-none align-items-center" style="min-height: 100%;background-color: #1b354d;font-size: 15px;">
+                <ul class="list-group rounded-0" >
+                    <a class="list-group-item rounded-0 d-flex gap-2 text-white" >
                         <i class="fas fa-house mt-1" style="font-size: 15px;font-weight: 10;"></i>
                         <span style="font-weight: 10;">Home</span>
                     </a>
@@ -90,7 +90,7 @@
                     <a class="list-group-item" href="">E-Bill Particulars</a>
                 </ul>
             </div>
-            <div class="content p-2 col-10 ps-3" ui-view style="max-height: 100%;"></div>
+            <div class="content overflow-auto p-2 col-10 ps-3" ui-view style="max-height: 100%;"></div>
         </div>
     </div>
 </body>
