--- a/other_bills_task/client/billEntry.html
+++ b/other_bills_task/client/billEntry.html
@@ -81,7 +81,7 @@
                 <a class="btn ms-2 px-4 text-white" style="background-color: #1b354d;">Search</a>
             </div>
         </div>
-        <!-- <div class="entry border border-2 rounded-2 mt-3 bg-primary bg-opacity-10 p-2">
+        <div class="entry border border-2 rounded-2 mt-3 bg-primary bg-opacity-10 p-2">
             <div class="d-flex fw-semibold justify-content-between align-items-center">
                 <p class="col-5 fw-bold">Name</p>
                 <p class="col-7">..</p>
@@ -168,10 +168,10 @@
             <div class="d-flex justify-content-center">
                 <a class="btn text-white" href="" style="background-color: #1b354d;">ADD</a>
             </div>
-        </div> -->
+        </div>
     </div>
     <div class="transactions mt-3 mx-3">
-        <div class="d-flex justify-content-between align-items-center border-bottom fs-10">
+        <div class="d-flex justify-content-between align-items-center  fs-10">
             <p class="fw-bold mt-2">AGENCY/EMPLOYEE LIST</p>
             <a class="btn btn-success btn-sm d-flex gap-2 justify-content-between align-items-center bg-opacity-75" href="">
                 <i class="fas fa-solid fa-print"></i>
@@ -199,20 +199,20 @@
             </thead>
             <tbody>
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
@@ -220,8 +220,89 @@
             style="font-size: 15px;color: rgb(170, 72, 6);">
             <p class="p-0 m-0">If you dont find HOA for the bill please select <strong class="mx-1">Other</strong>option</p>
         </div>
-        <div class="d-flex justify-content-between align-items-center mt-3">
-            <p class="p-0 m-0 fw-semibold">Select Head of Account <span class="text-danger">*</span></p>
+        <div class="col-md-9 mt-3 ms-2">
+            <div class="d-flex align-items-center">
+                <p class="p-0 m-0 col-4 fw-bold">Select Head of Account<span class="text-danger">*</span></p>
+                <select class="form-control my-1">
+                    <option selected disabled value="">Select</option>
+                </select>
+            </div>
+            <div class="d-flex align-items-center">
+                <p class="p-0 m-0 col-4 fw-bold">Agency Reference Number<span class="text-danger">*</span></p>
+                <input type="text" class="form-control my-1">
+            </div>
+            <div class="d-flex align-items-center">
+                <p class="p-0 m-0 col-4 fw-bold"></p>
+                <p class="m-0 p-0 fw-semibold" style="font-size: 12px;">* Enter phoneno of telephone bill,Water can number of water bill ...etc</p>
+            </div>
+            <div class="d-flex align-items-center">
+                <p class="p-0 m-0 col-4 fw-bold">Enter Service Major Head<span class="text-danger">*</span></p>
+                <input type="text" class="form-control my-1">
+            </div>
+            <div class="d-flex align-items-center">
+                <p class="p-0 m-0 col-4 fw-bold">Enter Purpose<span class="text-danger">*</span></p>
+                <textarea type="textarea" class="form-control my-1"></textarea>
+            </div>
+        </div>
+        <div class="scrutiny">
+            <p class="ms-2 mt-3 pb-2 border-bottom fw-bold">SCRUTINY ITEMS</p>
+            <table class="table table-bordered">
+                <thead class="bg-primary bg-opacity-10" style="color: rgba(5, 78, 195, 0.96);">
+                    <tr>
+                        <th>S.No</th>
+                        <th>Description</th>
+                        <th>Yes</th>
+                        <th>No</th>
+                        <th>N/A</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="attachments">
+            <p class="ms-2 mt-3 pb-2 border-bottom fw-bold">ATTACHMENTS</p>
+            <table class="table table-bordered">
+                <thead class="bg-primary bg-opacity-10" style="color: rgba(5, 78, 195, 0.96);">
+                    <tr>
+                        <th>S.No</th>
+                        <th>Description</th>
+                        <th class="col-4">Upload</th>
+                        <th>Uploaded Files</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="fw-semibold">
+                        <td>1</td>
+                        <td>Others</td>
+                        <td>
+                            <div class="file">
+                                <input type="file" class="form-control">
+                            </div>
+                            <textarea type="textarea" class="form-control mt-2" placeholder="Enter Remarks here..."></textarea>
+                            <a class="btn btn-success text-white mx-1 my-3" >ADD</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="d-flex my-4 col-4 border border-1 rounded-2">
+            <select class="form-select border-0">
+                <option selected disabled>Select Phone Number</option>
+            </select>
+            <a class="btn btn-success btn-sm text-white col-4 align-items-center pt-2" style="font-size: 12px;">GENERATE OTP</a>
+        </div>
+        <p style="border-bottom:2px dashed lightgray; "></p>
+        <div class="d-flex justify-content-center mb-3">
+            <a class="btn text-white" style="background-color: #1b354d;">SUBMIT BILL</a>
         </div>
     </div>
 </div>
